[ADD] extension: allow to build graphs using graphviz

--- a/extensions/odoo_theme/static/style.scss
+++ b/extensions/odoo_theme/static/style.scss
@@ -971,6 +971,13 @@ header.o_main_header {
                 }
             }
         }
+        .graphviz {
+            overflow-x: auto;
+            white-space: nowrap;
+            img {
+                max-width: unset;
+            }
+        }
     }
 }
 //------------------------------------------------------------------------------
